--- a/PixelArt/autor.html
+++ b/PixelArt/autor.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <link href="http://fonts.cdnfonts.com/css/common-pixel" rel="stylesheet">
     <title>Pixel Art</title>
+    <link rel="icon" type="image/x-icon" href="imagenes/2.jpg">
 
     <style>
         @import url('http://fonts.cdnfonts.com/css/common-pixel');
@@ -152,7 +153,7 @@
             margin: 2%;
         }
 
-        #autorr {
+        #autor {
             border: 2px solid white;
         }
     </style>
@@ -162,11 +163,11 @@
 <body>
     <header>
         <h1 id="titulo">Pixel Art</h1>
-        <img id="logo" src="imagenes/logo (2).png" width="7%">
     </header>
+
     <div id="contenedor">
         <div id="bloque1">
-            <img id="autorr" src="imagenes/autorr.jpg">
+            <img id="autor" src="imagenes/autorr.jpg">
         </div>
         <div id="bloque2">
             <p>Richard Shoup (30 de julio de 1943 - 18 de julio de 2015) fue un científico informático y empresario
@@ -197,6 +198,7 @@
             </p>
         </div>
     </div>
+
     <footer>
         <div id="menu">
             <ul>
@@ -207,7 +209,6 @@
             </ul>
         </div>
     </footer>
+
 </body>
-
-
 </html>
