--- a/PixelArt/contacto.html
+++ b/PixelArt/contacto.html
@@ -2,10 +2,10 @@
 <html>
 
 <head>
-
     <meta charset="UTF-8">
     <link href="http://fonts.cdnfonts.com/css/common-pixel" rel="stylesheet">
     <title>Pixel Art</title>
+    <link rel="icon" type="image/x-icon" href="imagenes/2.jpg">
 
     <style>
         @import url('http://fonts.cdnfonts.com/css/common-pixel');
@@ -183,45 +183,53 @@
 <body>
     <header>
         <h1 id="titulo">Pixel Art</h1>
-        <img id="logo" src="imagenes/logo (2).png" width="5%">
     </header>
+
     <h1 id="titulo2">Soy artista de juegos, ilustrador y hago pixel art.</h1>
+
     <div class="contenedor">
         <a href="https://www.instagram.com/pixelgustavo/">
             <div class="prueba"><img src="imagenes/pixel/insta.png" width="10%">
                 <h2>Instagram</h2>
             </div>
         </a>
+
         <a href="https://www.etsy.com/shop/myPixelFriends">
             <div class="prueba"><img src="imagenes/pixel/asw.png" width="10%">
                 <h2>Online Prints Shop</h2>
             </div>
         </a>
+
         <a href="https://twitter.com/PixelGustavo">
             <div class="prueba"><img src="imagenes/pixel/twitter.png" width="10%">
                 <h2>Twitter</h2>
             </div>
         </a>
+
         <a href="https://www.facebook.com/GustavoViselnerArt">
             <div class="prueba"><img src="imagenes/pixel/face.png" width="10%">
                 <h2>Facebook</h2>
             </div>
         </a>
+
         <a href="https://www.behance.net/gustavo_v">
             <div class="prueba"><img src="imagenes/pixel/be.png" width="10%">
                 <h2>Behance</h2>
             </div>
         </a>
+
         <a href="https://dribbble.com/viselner">
             <div class="prueba"><img src="imagenes/pixel/dri.png" width="10%">
                 <h2>Dribble</h2>
             </div>
         </a>
+
         <a href="https://foundation.app/@pixelgustavo">
             <div class="prueba"><img src="imagenes/pixel/fo.png" width="10%">
                 <h2>Foundation</h2>
             </div>
         </a>
+
         <a href="mailto: viselner@gmail.com">
             <div id="email" class="prueba">
                 <h2>Email: viselner@gmail.com</h2>
@@ -239,6 +247,7 @@
             </ul>
         </div>
     </footer>
+
 </body>
 
 
