--- a/PixelArt/inicio.html
+++ b/PixelArt/inicio.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <link href="http://fonts.cdnfonts.com/css/common-pixel" rel="stylesheet">
     <title>Pixel Art</title>
+    <link rel="icon" type="image/x-icon" href="imagenes/2.jpg">
 
     <style>
         @import url('http://fonts.cdnfonts.com/css/common-pixel');
@@ -150,8 +151,8 @@
 <body>
     <header>
         <h1 id="titulo">Pixel Art</h1>
-        <img id="logo" src="imagenes/logo (2).png" width="7%">
     </header>
+
     <h2>¿Qué es?</h2>
     <p>El pixel art o arte de píxel es una forma de arte digital, creada a través de una computadora mediante el uso
         de programas de edición de gráficos rasterizados, donde las imágenes son editadas al nivel del píxel. Las
@@ -172,6 +173,7 @@
             <img src="imagenes/3.jpg">
         </div>
     </div>
+
     <footer>
         <div id="menu">
             <ul>
