--- a/PixelArt/galeria.html
+++ b/PixelArt/galeria.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <link href="http://fonts.cdnfonts.com/css/common-pixel" rel="stylesheet">
     <title>Pixel Art</title>
+    <link rel="icon" type="image/x-icon" href="imagenes/2.jpg">
 
     <style>
         @import url('http://fonts.cdnfonts.com/css/common-pixel');
@@ -180,8 +181,8 @@
 <body>
     <header>
         <h1 id="titulo">Pixel Art</h1>
-        <img id="logo" src="imagenes/logo (2).png" width="5%">
     </header>
+
     <div id="contenedor">
         <div class="bloque">
             <div class="caja">
@@ -194,6 +195,7 @@
                 <img src="imagenes/pixel/3.png" width="100%" height="200px">
             </div>
         </div>
+
         <div class="bloque">
             <div class="caja">
                 <img src="imagenes/pixel/4.png" width="100%" height="200px">
@@ -205,6 +207,7 @@
                 <img src="imagenes/pixel/6.png" width="100%" height="200px">
             </div>
         </div>
+
         <div class="bloque">
             <div class="caja">
                 <img src="imagenes/pixel/7.png" width="100%" height="200px">
@@ -217,6 +220,7 @@
             </div>
         </div>
         <hr>
+
         <h1 id="titulo2">Video Tutorial</h1>
         <div id="video">
             <iframe width="760" height="415" src="https://www.youtube.com/embed/59Y6OTzNrhk"
